--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2024"
 anyhow = "1.0.100"
 bad-signals = "0.1.0"
 fontdue = "0.9.3"
-harfrust = "0.4.0"
+harfrust = "0.4.1"
 image = "0.25.9"
 rand = "0.9.2"
 sdl3 = { version = "0.16.2", features = ["build-from-source"] }
+
+[target.'cfg(windows)'.dependencies]
+windows = {version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics", "Win32_Graphics_Gdi"]}
